--- a/src/styles/_typog.scss
+++ b/src/styles/_typog.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Open+Sans:wght@600&display=swap');
